# Learning_task

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/: README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/chassis_controller/: CMakeLists.txt  package.xml
catkin_ws/src/chassis_controller/config/: controllers.yaml
catkin_ws/src/chassis_controller/launch/: load_controller.launch  teleop_twist_keyboard.launch
catkin_ws/src/chassis_controller/src/: teleop_twist_keyboard.cpp
catkin_ws/src/learn_description/: CMakeLists.txt  package.xml
catkin_ws/src/learn_description/config/rviz/: config.rviz
catkin_ws/src/learn_description/launch/: load_description.launch
catkin_ws/src/learn_description/urdf/: robot.urdf  robot.xacro
config/: controller_config.yaml
doc/: Pre-commit.md  URDF_Design.md  learning_note.md  notes.md
launch/: load_controllers.launch  show_model.launch
learning_task/: .gitignore  CMakeLists.txt  package.xml
learning_task/config/: config.yaml  urdf.rviz
learning_task/launch/: robot.launch
learning_task/urdf/: robot.urdf
my_robot/: CMakeLists.txt  package.xml  urdf_learn.md
my_robot/config/: controller.yaml  my_robot.rviz
my_robot/launch/: my_robot.launch
my_robot/urdf/: robot.urdf.xacro  wheel.urdf.xacro
note/: github&clion.md  urdf.md  urdf.txt
notes/: URDF and Git pre-commit gitignore学习历程.md  关于调电机.md  快速部署电脑.md
qyd_work/car_ws/: .gitignore  README.md
qyd_work/car_ws/.catkin_tools/profiles/default/: devel_collisions.txt
qyd_work/car_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
qyd_work/car_ws/devel/.private/catkin_tools_prebuild/: .catkin  (+2 more)
qyd_work/car_ws/src/robot_car/: .gitignore  CMakeLists.txt
robot_description/: README.md
robot_description/launch/: demo01.launch
rviz/: launch.rviz
src/config/: joint_state_controller.yaml
src/launch/: car.launch
src/urdf/: car.urdf.xacro
urdf/: car.urdf.xacro  new_car.urdf.xacro
(+16 files in other folders)
